<resources>
    <string name="app_name">Tarea 3</string>
    <string name="Agregar_prenda">Agregar prenda</string>
    <string name="Consultar_outfit">Consultar Outfit</string>
    <string name="Outfit_cabeza">Cabeza</string>
    <string name="Outfit_cuerpo">Cuerpo</string>
    <string name="Outfit_piernas">Piernas</string>
    <string name="Outfit_pies">Pies</string>
    <string name="Bienvenida_vista_dos">¡Personaliza tu outfit!</string>
    <string name="Temperatura">22°</string>
    <string name="Clima">Soleado</string>
    <string name="Regreso">Regresar</string>
    <string name="Actualiza">Actualiza clima</string>
    <string name="Bienvenida_vista_uno">Agrega una prenda para tus outfits</string>
    <string name="Login">¡Inicia sesión para guardar tus outfits y agregar prendas!</string>
    <string name="Bienvenida">Es un gusto tenerte de vuelta</string>
    <string name="Registro">Registrar</string>
    <string name="Correo">Correo: </string>
    <string name="CorreoEjemplo">ejemplos@example.com</string>
    <string name="Contraseña">Contraseña: </string>
    <string name="ContraseñaEjemplo">12345678</string>
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Abrir_drawer">Abiertor</string>
    <string name="Cerrar_drawer">Cerrado</string>
    <string name="Titulo_personalizar_outfit">¡Personalización!</string>
    <string name="Header_string">Ventanas de navegación</string>
    <string name="Saludo">¡Hola!</string>
    <string name="NombreUsuario">Nombre del usuario</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="EliminarCuenta">Eliminar cuenta</string>
    <string name="GuardarPrenda">Guardar prenda</string>
    <string name="Color">Color</string>
    <string name="Categoría">Categoría</string>
    <string name="NombrePrenda">Nombre de la prenda</string>
    <string name="agregar_foto">Agregar foto</string>
</resources>